--- a/common/src/main/res/layout/activity_home.xml
+++ b/common/src/main/res/layout/activity_home.xml
@@ -28,5 +28,15 @@
         android:text="@string/start_button_value"
         />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/home_LBL_ad"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#000000"
+        android:textColor="#FFFFFF"
+        android:text="--------"
+        android:layout_alignParentBottom="true"
+        android:textSize="24sp"/>
+
 
 </RelativeLayout>
